==================== 2.23.91 ====================

2008-08-31  Seán de Búrca  <sdeburca@svn.gnome.org>

	* panel-context-menu.c: (panel_context_menu_show_about_dialog):
	Set title of about dialog to allow for correct translation. Fixes bug
	#549902.

==================== 2.23.90.1 ====================

2008-08-21  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/panel-session-manager.c:
	(panel_session_manager_request_logout): update for signature change for
	the Logout method

==================== 2.23.90 ====================

2008-08-18 Baptiste Mille-Mathias <baptiste.millemathias@gmail.com>

	* panel-icon-names.h: change the bookmark icon name according to latest
	gnome-icon-theme, so version 2.23.90 is needed now,
	Patch from Michael Monreal <michael.monreal@gmx.net>.
	Fix bug #547626.

==================== 2.23.6 ====================

2008-08-04  Vincent Untz  <vuntz@gnome.org>

	* panel-toplevel.c: (panel_toplevel_update_struts): remove the special
	case for auto-hidden panels. We just update the struts as if they were
	normal panels, with their current position.
	This changes a bit the behavior (ie, full-screen windows resize when
	the panel gets unhidden and then hidden again), but after playing with
	it, I think the new behavior is actually quite nice. If we revert the
	change, then we'll have to fix bug #529031 by clamping auto_hide_size,
	like we do in panel_toplevel_update_auto_hide_position().
	Fix bug #529031.

2008-08-04  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_make_unique_desktop_path_from_name): go back to
	NAME_MAX instead of MAXNAMLEN since the former is POSIX and not all OS
	have MAXNAMLEN either. Since we have to be compatible with all OS out
	there, use MAXNAMLEN if NAME_MAX is not defined on the OS.
	Fix bug #500341.

2008-08-04  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-bar.c: (panel_menu_bar_hide_tooltip_and_focus): renamed
	from panel_menu_bar_hide_tooltip(), and also unfocus the focused